--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -116,11 +116,11 @@
 
   height: 500px;
   padding-left: 25%;
-  .carousel {
+  .slide {
       width: 890px;
       height: 500px;
     }
-    
+  
   .slideshow-text{
         top: 50px;
         position: relative;
