--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,7 @@
 --maroon:#83333e;
 --off-white:#f2f4f5;
 }
+
 .leftside{
   width: 50%;
   float: left;
@@ -29,43 +30,70 @@
   gap: 10px;
 }
 .intro{
-  height: 500px;
+  height: 90vh;
   background-color:var(--black);
-
-  .intro-image{
-    left:50%;
-    transform: translate(-50%,-50%);
-    height: 300px;
-    width: 600px;
-    overflow: hidden;
-  }
+  padding: 12px;
+  
+  
   .name-text{
         position: relative;
         font-size: 64px;
         text-transform: uppercase;
-        top: 7%;
+        
         font-weight: 700;
         color:var(--white);
-
+        
   
         text-align: center;
         mix-blend-mode: difference;
 
     }
-    .main-text{
-          position: relative;
-          font-size: 20px;
-          top:10%;
-          
-          font-weight: 700;
-          color:var(--white);
-         
-          text-align: center;
-          mix-blend-mode: difference;
+        
+}
+@keyframes moveLeft {
+  0% {
+    transform: translateX(100px);
+  }
 
-        }
+  100% {
+    transform: translateX(-100px);
+    ;
+  }
+}
+@keyframes moveRight {
+  0% {
+    
+  }
+
+  100% {
+    transform: translateX(200px);
+    ;
+  }
 }
 
+.shortDesciption{
+  top:15%;
+  position: relative;
+  font-size: 30px;
+  animation: moveLeft 2.5s forwards;
+  color: var(--white);
+  margin-left: 25px;
+}
+.intro-image {
+  width: 70%;
+  animation: moveRight 2.5s forwards;
+}
+
+.main-text {
+  position: relative;
+  font-size: 70px;
+  top: 10%;
+  font-weight: 700;
+  color: var(--white);
+  animation: moveLeft 2s forwards;
+  mix-blend-mode: difference;
+  padding:20px;
+}
 .experience{
   height: 500px;
   
