--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,7 +32,7 @@
 }
 .intro {
   height: 95vh;
-  background-color: var(--black);
+  background-color: #080808;
   padding: 24px;
   display: flex;
   flex-direction: row;
@@ -167,6 +167,31 @@
 }
 .workcard {
   display: flex;
+}
+.aboutme {
+  width: 100%;
+  padding: 20px 18px 20px;
+  height: 600px;
+  .title{
+    width: 100%;
+    height : 70px;
+    text-align: center;
+  }
+  .program-img{
+    margin-right: 0.5rem;
+    float: right;
+    width: 50%;
+    padding: 0.5rem;
+  }
+  .aboutimage {
+      width: 100%;
+  }
+    .aboutpara {
+      margin-top: 7rem;
+      font-size: 18px;
+      width: 40%;
+      margin-left: 0.5rem;
+    }
 }
 .slideshow {
   position: relative;
