--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -6,9 +6,9 @@
  }
  .aboutbackground{
   position: relative;
-   background-color: #1D1B1B;
+  background-color: #ffffff;
   min-height: 100vh;
-   width:100%;
+  width:100%;
 }
 .center {
   position: relative;
