--- a/src/styles/certification.css
+++ b/src/styles/certification.css
@@ -1,6 +1,6 @@
 .aboutbackground {
      position: relative;
-     background-color: #1D1B1B;
+     background-color: #000000;
      width: 100%;
  }
 .picture {
