--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,7 +3,7 @@
     height: 76px;
     font-size: 24px;
     padding: 20px;
-    background-color: #00008B !important;
+    background-color:#000000 !important;
     .logo{
         font-size: 30px;
     }
