--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,9 @@
   --maroon: #83333e;
   --off-white: #f2f4f5;
 }
-
+#blacktext{
+  color: black;
+}
 .leftside {
   width: 50%;
   float: left;
@@ -32,7 +34,7 @@
 }
 .intro {
   height: 95vh;
-  background-color: #080808;
+  background-color: #ffffff;
   padding: 24px;
   display: flex;
   flex-direction: row;
@@ -41,7 +43,7 @@
     font-size: 64px;
     text-transform: uppercase;
     font-weight: 700;
-    color: var(--white);
+    color: var(--black);
     text-align: center;
     mix-blend-mode: difference;
   }
@@ -53,7 +55,7 @@
     margin-top: 5%;
     font-size: 30px;
     animation: moveLeft 2.5s forwards;
-    color: var(--white);
+    color: var(--black);
     margin-left: 350px;
   }
   .main-text {
@@ -61,9 +63,9 @@
     font-size: 70px;
     margin-left: 350px;
     font-weight: 700;
-    color: var(--white);
+    color: var(--black);
     animation: moveLeft 2s forwards;
-    mix-blend-mode: difference;
+   
   }
 
    
@@ -121,7 +123,7 @@
   transform: translateY(-50%);
 }
 .background {
-  background-image: url("../images/background.png");
+  background-image: var(--black);
   background-size: cover;
   width: 100%;
 }
@@ -170,9 +172,12 @@
 }
 .aboutme {
   width: 100%;
+  background-color: #ffffff;
+  
   padding: 20px 18px 20px;
   height: 600px;
   .title{
+    color: black;
     width: 100%;
     height : 70px;
     text-align: center;
@@ -186,6 +191,7 @@
   .aboutimage {
       width: 100%;
   }
+  
     .aboutpara {
       margin-top: 7rem;
       font-size: 18px;
